--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Lab: Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
-    <form id="sizePicker">
+    <form id="gridSize">
         Grid Height:
         <input type="number" id="inputHeight" name="height" min="1" max="50" value="20">
         Grid Width:
