--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <input type="number" id="inputHeight" name="height" min="1" max="50" value="20">
         Grid Width:
         <input type="number" id="inputWeight" name="width" min="1" max="50" value="20">
-        <input type="submit" id="inputSubmitGridSize">
+        <input type="submit">
+        <input type="text" id="pixelHtml" style="height: 100px;">
     </form>
 
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
-
+    
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
 
