--- a/index.html
+++ b/index.html
@@ -8,27 +8,6 @@
     <link rel="stylesheet" href="https://unpkg.com/huebee@1/dist/huebee.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <style>
-    .canvas-table {
-        background-color: #b0c3d2;
-    }
-    .grid-pr {
-        margin-left: 0;
-    }
-    .huebee__cursor {
-        width: 15px;
-        height: 15px;
-    }
-    .huebee__container {
-        margin-top: 10px;
-    }
-    .drawingLabel, .painting {
-        display:block;
-    }
-    #directionStart ul {
-        -webkit-padding-start: 0px;
-    }
-    </style>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark mb-3">
@@ -83,6 +62,7 @@
                 </ul>
             </div> 
         </div> 
+        <!-- end directions -->
     </div>
     <!-- End Options Row -->
 
